--- a/templates/home.html
+++ b/templates/home.html
@@ -1,123 +1,389 @@
-<!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-* {box-sizing: border-box;}
+    <head>
+        <title>
+            Twitter Sentiment Analysis
+        </title>
+    </head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
 
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #6a9ac4;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+#contact {
+  background-color: #6a9ac4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
+.contact-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.contact-links, .contact-form-wrapper {
+    width: 100%;
+    height: 100%;
+  padding: 8% 5% 10% 5%;
+}
+
+
+.contact-links {
+  background-color: #1f2e43;
+  background:
+    radial-gradient(
+      circle at 55% 92%, #426691 0 12%, transparent 12.2%
+    ), 
+    radial-gradient(
+      circle at 94% 72%, #426691 0 10%, transparent 10.2%
+    ), 
+    radial-gradient(
+      circle at 20% max(78%, 350px), #263a53 0 7%, transparent 7.2%
+    ), 
+    radial-gradient(
+      circle at 0% 0%, #263a53 0 40%, transparent 40.2%
+    ), 
+    #1f2e43;
+}
+
+.contact-form-wrapper {
+  background-color: #ffffff8f;
+  border-radius: 0 10px 10px 0;
+}
+
+@media only screen and (max-width: 800px) {
+  .contact-links, .contact-form-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .contact-links {
+      width: 100%;
+      height: 100%;
+      padding: 8% 5% 10% 5%;
+  }
+  
+  .contact-form-wrapper {
+    border-radius: 0 0 10px 10px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .contact-box {
+    width: 100%;
+    height: 100%;
+    margin: 8% 5%;
+  }
+}
+
+h2 {
+  font-family: 'Arimo', sans-serif;
+  color: #fff;
+  font-size: clamp(30px, 6vw, 60px);
+  letter-spacing: 2px;
   text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+  transform: scale(.95, 1);
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
+.links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 50px;
 }
 
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.topnav .search-container {
-  float: right ;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-  width: 700px;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
+.link {
+  margin: 10px;
   cursor: pointer;
-  width: 100px;
 }
 
-.topnav .search-container button:hover {
-  background: #ccc;
+img {
+  width: 45px;
+  height: 45px;
+  transition: 0.2s;
+  user-select: none;
+}
+
+img:hover {
+  transform: scale(1.1, 1.1);
+}
+
+img:active {
+  transform: scale(1.1, 1.1);
+  filter: 
+    hue-rotate(220deg)
+    drop-shadow(2px 4px 4px #222)
+    sepia(0.3);
+}
+
+.form-item {
+  position: relative;
+}
+
+label, input, textarea {
+  font-family: 'Poppins', sans-serif;
+}
+
+label {
+  position: absolute;
+  top: 10px;
+  left: 2%;
+  color: #999;
+  font-size: clamp(14px, 1.5vw, 18px);
+  pointer-events: none;
+  user-select: none;
+}
+
+input, textarea {
+  width: 100%;
+  outline: 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  padding: 12px;
+  font-size: clamp(15px, 1.5vw, 18px);
+}
+
+input:focus+label, 
+input:valid+label, 
+textarea:focus+label, 
+textarea:valid+label {
+  font-size: clamp(13px, 1.3vw, 16px);
+  color: #777;
+  top: -20px;
+  transition: all .225s ease;
+}
+
+.submit-btn {
+  background-color: #13A0F6;
+  filter: drop-shadow(2px 2px 3px #0003);
+  color: #fff;
+  font-family: "Poppins",sans-serif;
+  font-size: clamp(16px, 1.6vw, 18px);
+  display: block;
+  padding: 12px 20px;
+  margin: 2px auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  user-select: none;
+  transition: 0.2s;
+}
+
+.submit-btn:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.submit-btn:active {
+  transform: scale(1.1, 1.1);
+  filter: sepia(0.5);
+}
+
+
+.barplot{
+  width: 40%;
+  margin-left: 30%;
+  height: auto;
+  align-items: center;
+}
+
+@media only screen and (max-width: 800px) {
+  h2 {
+    font-size: clamp(40px, 10vw, 60px);
+  }
+  
+  .contact-box {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .contact-links, .contact-form-wrapper {
+      width: 100%;
+      height: 100%;
+    padding: 23% 5% 23% 5%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+    .contact-box {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      
+      .contact-links, .contact-form-wrapper {
+          width: 100%;
+          height: 100%;
+        padding: 28% 10% 28% 10%;
+      }
+  h2 {
+    font-size: clamp(30px, 12vw, 60px);
+  }
+  
+  .links {
+    padding-top: 30px;
+  }
+  
+  img {
+    width: 38px;
+    height: 38px;
+  }
+}
+table {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  /* table-layout: ; */
+}
+
+table caption {
+  font-size: 1.5em;
+  margin: .5em 0 .75em;
+}
+
+table tr {
+  background-color: #f8f8f8;
+  border: 1px solid #ddd;
+  padding: .35em;
+}
+
+table th,
+table td {
+  padding: .625em;
+  text-align: left;
+}
+
+table th {
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 600px) {
-  .topnav .search-container {
-    float: none;
+  table {
+    border: 0;
   }
-  .topnav a, .topnav input[type=text], .topnav .search-container button {
-    float: none;
+
+  table caption {
+    font-size: 1.3em;
+  }
+  
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  
+  table tr {
+    border-bottom: 3px solid #ddd;
     display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
+    margin-bottom: .625em;
   }
-  .topnav input[type=text] {
-    border: 1px solid #ccc;
+  
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
   }
-}
-</style>
-</head>
-<body>
+  
+  table td::before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  table td:last-child {
+    border-bottom: 0;
+  }
+}.pull-left {float:left;}
+.pull-right {float:right;}
 
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <div class="search-container">
-     <form action = {{url_for('get_data')}} method = "post">
-      <input type="text" placeholder="Keyword" name="keyword">
-      <input type = "number" placeholder = "Count" name = "count">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-  </div>
-</div>
-
-<div style="padding-left:16px">
-  <h2> Twitter Sentiment Analysis </h2>
-</div>
-<br>
-<div>
-<!--   <h3>The hashtags in tweet are {{hsh}}.</h3>
-     <h3> The clean tweet is: {{text}}.</h3>
-     <h3> The Overall Sentiment is: &emsp;{{sent}}. </h3>
-     <h3> The Predicted Compound value is &emsp;{{cv}} <br> The Predicted Polarity is &emsp;{{pol}} <br> The Predicted Subjectivity is &emsp;{{sub}} </h3>
-      <center><p>BAR CHART</p> -->
-      {{ sentiment|safe }}
-      
-      <left><p>{{Bar|safe}}</p>  
-        <img src= "{{plot}}"/></left>
-      <right><p>{{word_cloud|safe}}</p>
-        <img src = "{{wc}}"/></right>
-      {{ val|safe }}
-      {{ hashtag|safe }}
-      {{ text|safe }}
-      {% for table in tables %}
+    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <section id="contact">
+        <div class="contact-box">
+          <div class="contact-links">
+            <h2>Twitter Sentiment Analysis</h2>
+            <div class="links">
+              <div class="link">
+                <a><img src="https://www.net-aware.org.uk/siteassets/images-and-icons/application-icons/app-icons-twitter.png?w=585&scale=down" alt="Twitter"></a>
+              </div>
+              <!-- <div class="link">
+                <a><img src="https://i.postimg.cc/YCV2QBJg/github.png" alt="github"></a>
+              </div>
+              <div class="link">
+                <a><img src="https://i.postimg.cc/W4Znvrry/codepen.png" alt="codepen"></a>
+              </div>
+              <div class="link">
+                <a><img src="https://i.postimg.cc/NjLfyjPB/email.png" alt="email"></a>
+              </div> -->
+            </div>
+          </div>
+          <div class="contact-form-wrapper">
+            <form action = {{url_for('get_data')}} method = "post">
+              <div class="form-item">
+                <input type="text" name="keyword" required="">
+                <label>Enter a Keyword:</label>
+              </div>
+              <div class="form-item">
+                <input type="number" name="count" required="">
+                <label>Total number of Tweets that you have to Analysis:</label>
+              </div>
+              <!-- <div class="form-item">
+                <textarea class="" name="message" required=""></textarea>
+                <label>Message:</label>
+              </div> -->
+              <button type="submit" class="submit-btn">Search</button>  
+            </form>
+          </div>
+        </div>
+      </section>
+      <div style="background-color: white;">
+        <!--   <h3>The hashtags in tweet are {{hsh}}.</h3>
+             <h3> The clean tweet is: {{text}}.</h3>
+             <h3> The Overall Sentiment is: &emsp;{{sent}}. </h3>
+             <h3> The Predicted Compound value is &emsp;{{cv}} <br> The Predicted Polarity is &emsp;{{pol}} <br> The Predicted Subjectivity is &emsp;{{sub}} </h3>
+              <center><p>BAR CHART</p> -->
+                <h2 style="color: #111;">{{Bar|safe}}</h2> 
+              {{ sentiment|safe }}
+              
+               
+                <img class = "barplot" src= "{{plot}}"/>
+              <h2 style="color: #111;">{{word_cloud|safe}}</h2>
+                <img class = "barplot" src = "{{wc}}"/>
+              <p style="text-align: center;">{{ val|safe }}</p>
+              <h2 style="text-align: center;">{{ hashtag|safe }}</h2>
+              {{ text|safe }}
+              
               {{ table|safe }}
-      {% endfor %}
-      
-    </div>
-
-</body>
+             
+              
+            </div>
 </html>
